# smcp

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSING-UPDATE-SUMMARY.md  README.md  __init__.py  governor.py  issue_5_comment.md  issue_7_comment.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  smcp.py  smcp_stdio.py  start.sh  start_stdio.bat
.github/workflows/: ci.yml
docs/: FASTMCP-issue_update.md  Letta-MCP-Connection-Guide.md  api-reference.md  deployment-guide.md  examples.md  getting-started.md  plugin-development-guide.md  puppetry-plugin-integration-audit.md  troubleshooting.md
docs/examples/: governor-profiles.json
docs/history/: README.md
docs/planning/: http-transport-auth.md  stdio-transport-implementation.md
docs/plugin-contract/: v1.json
plugins/: README.md
plugins/botfather/: __init__.py  cli.py
plugins/broca/: README.md  __init__.py  cli.py
plugins/demo_math/: __init__.py  cli.py
plugins/demo_text/: __init__.py  cli.py
plugins/devops/: __init__.py  cli.py
smcp/: __init__.py  mcp_server.py
tests/: conftest.py
tests/e2e/: test_mcp_workflow.py
tests/fixtures/: governor_profiles_sanctum.json
tests/integration/: test_auth_middleware.py  test_http_app.py  test_mcp_protocol.py
tests/unit/: test_auth.py  test_bool_args.py  test_demo_plugins.py  test_describe_contract.py  test_error_roundtrip.py  test_governor.py  test_letta_env_loading.py  test_logging_config.py  test_mcp_server.py  test_plugin_timeout.py  test_py_compat.py  test_server_context.py  test_server_internals.py  test_stdio_entry.py  test_structured_args.py  test_subprocess_cleanup.py
