[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smcp"
version = "3.0.3"
description = "Sanctum Letta MCP Package - A modular orchestration server for Letta Agentic AI framework"
readme = "README.md"
license = {text = "AGPLv3"}
authors = [
    {name = "Mark Rizzn Hopkins", email = "mark@sanctumos.org"}
]
maintainers = [
    {name = "Mark Rizzn Hopkins", email = "mark@sanctumos.org"}
]
keywords = ["mcp", "letta", "ai", "agentic", "orchestration", "sanctum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The mcp dependency requires >=3.10, so that is the real floor (see #48/#51).
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0",
    "python-dotenv==1.0.0",
    "pydantic>=2.7.2,<3.0.0",
    "httpx>=0.27.0",
    "mcp>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock==3.12.0",
    "pytest-timeout>=2.1.0",
    "aiohttp-test-utils==0.1.0",
    "jsonschema>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock==3.12.0",
    "pytest-timeout>=2.1.0",
    "aiohttp-test-utils==0.1.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
# `pip install .` exposes both transports as console commands (issue #50).
smcp = "smcp:main"
smcp-stdio = "smcp_stdio:main"

[project.urls]
Homepage = "https://sanctumos.org"
Documentation = "https://github.com/sanctumos/smcp"
Repository = "https://github.com/sanctumos/smcp"
Issues = "https://github.com/sanctumos/smcp/issues"
Changelog = "https://github.com/sanctumos/smcp/blob/master/CHANGELOG.md"

[tool.setuptools]
# Flat single-file modules, declared explicitly so the build is unambiguous and
# `import smcp` never collides with a package directory (issue #50). Plugins are
# discovered at runtime via MCP_PLUGINS_DIR and are intentionally not packaged.
py-modules = ["smcp", "smcp_stdio", "governor"]

# NOTE: pytest and coverage configuration live in `pytest.ini` and `.coveragerc`
# (the single source of truth). Do not re-add [tool.pytest.ini_options] or
# [tool.coverage.*] here — pytest reads pytest.ini first and the duplicate blocks
# silently drift (issue #51).
